fix: completa flujo de documentos y exámenes entre roles
- Corrige la clasificación y visibilidad de documentos recibidos en alumno, profesor y admin.
- Añade avisos de éxito y error en las bandejas de envío.
- Bloquea vídeos en el envío y recepción de exámenes.
- Refresca automáticamente las entregas recibidas del profesor.
- Actualiza pruebas y baseline de cobertura JaCoCo.